AL-476 Fix create rule font visibility

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1429,16 +1429,17 @@ button.btn.btn-secondary.dropdown-toggle
 
 .create-rule
   text-align: center
+  max-width: 1000px
 
   h2
-    color: rgba(255, 255, 255, 0.5)
+    color: #7F98A5
     font-size: 18px
     font-weight: 700
     letter-spacing: 2px
     margin-bottom: 10px
 
   p
-    color: rgba(255, 255, 255, 0.5)
+    color: #7F98A5
     font-size: 14px
     font-weight: 500
     letter-spacing: 1px
@@ -1446,7 +1447,7 @@ button.btn.btn-secondary.dropdown-toggle
   svg
     margin-top: 10px
     margin-bottom: 20px
-    color: rgba(255, 255, 255, 0.3)
+    color: rgba(0, 0, 0, 0.2)
 
   section.filter
     // background: rgba(255, 255, 255, 0.05)
